# hotpath

./: PERFFORGE_RULES.md  PRODUCT_PLAN.md  README.md  hotpath_fixes.patch  pyproject.toml
examples/: better_training.py  slow_training.py
src/hotpath/: __init__.py  __main__.py  analyzer.py  cli.py  cost.py  models.py  report.py  rules.py
tests/: test_analyzer.py  test_cost.py
