[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hotpath-ai"
version = "0.1.0"
description = "A PyTorch GPU performance linter that finds expensive CUDA anti-patterns before they burn GPU hours."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Aylin Kirbas" }]
license = { text = "MIT" }
keywords = [
  "pytorch",
  "cuda",
  "gpu",
  "performance",
  "profiling",
  "profiler",
  "triton",
  "machine-learning",
  "deep-learning",
  "mlops",
  "ai",
  "linting",
  "static-analysis",
  "gpu-optimization",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/kirbasaylin/PerfForge"
Repository = "https://github.com/kirbasaylin/PerfForge"
Issues = "https://github.com/kirbasaylin/PerfForge/issues"

[project.scripts]
hotpath = "hotpath.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
